--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
+		"@central-icons-react/round-outlined-radius-3-stroke-2": "^1.1.94",
 		"@fontsource/ibm-plex-mono": "^5.2.7",
 		"@gsap/react": "^2.1.2",
 		"@paper-design/shaders-react": "^0.0.69",
@@ -19,6 +20,7 @@
 		"@react-three/postprocessing": "^3.0.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.27.1",
 		"gsap": "^3.14.2",
 		"lenis": "^1.3.17",
 		"lucide-react": "^0.562.0",
