--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
+		"@central-icons-react/round-filled-radius-3-stroke-2": "^1.1.94",
 		"@central-icons-react/round-outlined-radius-3-stroke-2": "^1.1.94",
 		"@fontsource/ibm-plex-mono": "^5.2.7",
 		"@gsap/react": "^2.1.2",
@@ -18,6 +19,7 @@
 		"@react-three/drei": "^10.7.7",
 		"@react-three/fiber": "^9.5.0",
 		"@react-three/postprocessing": "^3.0.4",
+		"@react-three/rapier": "^2.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.27.1",
@@ -25,6 +27,7 @@
 		"lenis": "^1.3.17",
 		"lucide-react": "^0.562.0",
 		"maplibre-gl": "^5.15.0",
+		"meshline": "^3.3.1",
 		"motion": "^12.25.0",
 		"next": "16.1.1",
 		"next-themes": "^0.4.6",
