--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
 		"@react-three/fiber": "^9.5.0",
 		"@react-three/postprocessing": "^3.0.4",
 		"@react-three/rapier": "^2.2.0",
+		"@types/qrcode": "^1.5.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.27.1",
 		"gsap": "^3.14.2",
 		"lenis": "^1.3.17",
+		"leva": "^0.10.1",
 		"lucide-react": "^0.562.0",
 		"maplibre-gl": "^5.15.0",
 		"meshline": "^3.3.1",
@@ -32,6 +34,7 @@
 		"next": "16.1.1",
 		"next-themes": "^0.4.6",
 		"ogl": "^1.0.11",
+		"qrcode": "^1.5.4",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"shadcn": "^3.6.3",
