--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack --port 3001",
+		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint"
@@ -13,7 +13,6 @@
 		"@central-icons-react/round-filled-radius-3-stroke-2": "^1.1.94",
 		"@central-icons-react/round-outlined-radius-3-stroke-2": "^1.1.94",
 		"@fontsource/ibm-plex-mono": "^5.2.7",
-		"@gsap/react": "^2.1.2",
 		"@paper-design/shaders-react": "^0.0.69",
 		"@phosphor-icons/react": "^2.1.10",
 		"@react-three/drei": "^10.7.7",
@@ -24,16 +23,10 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.27.1",
-		"gsap": "^3.14.2",
 		"lenis": "^1.3.17",
-		"leva": "^0.10.1",
-		"lucide-react": "^0.562.0",
-		"maplibre-gl": "^5.15.0",
 		"meshline": "^3.3.1",
-		"motion": "^12.25.0",
 		"next": "16.1.1",
 		"next-themes": "^0.4.6",
-		"ogl": "^1.0.11",
 		"qrcode": "^1.5.4",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
@@ -44,6 +37,7 @@
 		"use-sound": "^5.0.0"
 	},
 	"devDependencies": {
+		"@next/bundle-analyzer": "^16.1.4",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
