--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@react-three/postprocessing": "^3.0.4",
 		"@react-three/rapier": "^2.2.0",
 		"@types/qrcode": "^1.5.6",
+		"@vercel/analytics": "^1.6.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.27.1",
